--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.1",
-		"nodemailer": "^6.7.5"
+		"nodemailer": "^6.7.5",
+		"nodemon": "^2.0.20"
 	},
 	"eslintConfig": {
 		"extends": [
