--- a/package.json
+++ b/package.json
@@ -2,13 +2,24 @@
 	"name": "prt-mailer",
 	"version": "0.1.0",
 	"private": true,
-	"main": "server.js",
+	"main": "src/server.ts",
+	"scripts": {
+		"start": "ts-node src/server.ts"
+	},
 	"dependencies": {
+		"@types/cors": "^2.8.13",
+		"@types/express": "^4.17.15",
+		"@types/node": "^18.11.18",
+		"@types/nodemailer": "^6.4.7",
+		"class-transformer": "^0.5.1",
+		"class-validator": "^0.14.0",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.1",
 		"nodemailer": "^6.7.5",
-		"nodemon": "^2.0.20"
+		"nodemon": "^2.0.20",
+		"ts-node": "^10.9.1",
+		"typescript": "^4.9.4"
 	},
 	"eslintConfig": {
 		"extends": [
